adding option to generate board and download a text file copy

--- a/jeopardy.html
+++ b/jeopardy.html
@@ -1,8 +1,10 @@
 <!-- ─────────────────────────────────────────────────────────────
   Jeopardy — main page
-  Author:   Eric Jones
   Created:  2025-06-07
-  License:  MIT
+  
+  Copyright (c) 2025 Eric Jones
+  Licensed under the MIT License. See LICENSE.md for details.
+  
   Purpose:  Loads the Jeopardy board, links CSS + JS modules.
 ──────────────────────────────────────────────────────────────── -->
 <!DOCTYPE html>
@@ -38,6 +40,7 @@
       <div id="validation-message"></div>
       <div class="form-actions">
         <button id="generate-board">Create Game Board</button>
+        <button id="generate-download">Create and Download</button>
       </div>
     </div>
   </div>
