adding export/import draft file buttons to form interface

--- a/jeopardy.html
+++ b/jeopardy.html
@@ -54,6 +54,11 @@
               <button id="save-draft-btn" class="secondary-btn" style="margin-right: 10px;">Save Draft</button>
               <button id="discard-draft-btn" class="secondary-btn" style="display:none;">Discard Draft</button>
             </div>
+            <div class="draft-file-buttons">
+              <button id="export-draft-btn" class="secondary-btn" style="margin-right: 10px;">Export Draft File</button>
+              <button id="import-draft-btn" class="secondary-btn">Import Draft File</button>
+              <input type="file" id="draft-file-input" accept=".txt" style="display: none;" />
+            </div>
           </div>
         </div>
         
