--- a/jeopardy.html
+++ b/jeopardy.html
@@ -68,9 +68,7 @@
               <button id="discard-draft-btn" class="secondary-btn" style="display:none;">Discard Draft</button>
             </div>
             <div class="draft-file-buttons">
-              <button id="export-draft-btn" class="secondary-btn" style="margin-right: 10px;">Export Draft File</button>
-              <button id="import-draft-btn" class="secondary-btn">Import Draft File</button>
-              <input type="file" id="draft-file-input" accept=".txt" style="display: none;" />
+              <!-- Import functionality moved to main Load Draft File button -->
             </div>
           </div>
         </div>
