fixing 'Download Game File' button logic so that it doesn't also generate a game board

--- a/jeopardy.html
+++ b/jeopardy.html
@@ -97,7 +97,7 @@
       
       <div class="form-actions">
         <button id="generate-board">Create Game Board</button>
-        <button id="generate-download">Create and Download</button>
+        <button id="generate-download">Download Game File</button>
       </div>
     </div>
   </div>
