fixing alignment of save draft status

--- a/jeopardy.html
+++ b/jeopardy.html
@@ -64,11 +64,8 @@
           <span id="last-saved-display">No draft saved</span>
           <div class="draft-actions">
             <div class="draft-buttons">
-              <button id="save-draft-btn" class="secondary-btn" style="margin-right: 10px;">Save Draft</button>
+              <button id="save-draft-btn" class="secondary-btn">Save Draft</button>
               <button id="discard-draft-btn" class="secondary-btn" style="display:none;">Discard Draft</button>
-            </div>
-            <div class="draft-file-buttons">
-              <!-- Import functionality moved to main Load Draft File button -->
             </div>
           </div>
         </div>
