adding confirmation when user chooses to create a game board

--- a/jeopardy.html
+++ b/jeopardy.html
@@ -141,6 +141,18 @@
     </table>
   </div>
 
+  <!-- Confirmation Modal for Board Creation -->
+  <div id="confirmation-modal">
+    <div class="confirmation-content">
+      <h2>Create Game Board?</h2>
+      <p>This will start the game and hide the form. Make sure you've saved your work first.</p>
+      <div class="confirmation-buttons">
+        <button id="confirm-create-board">Continue</button>
+        <button id="cancel-create-board">Cancel</button>
+      </div>
+    </div>
+  </div>
+
   <!-- Prompt Modal for Question/Answer and Scoring -->
   <div id="prompt">
     <h2 id="prompt-question"></h2>
