allowing users to edit both draft and game files, editing descriptions to be more clear

--- a/jeopardy.html
+++ b/jeopardy.html
@@ -22,16 +22,16 @@
     <h2>Create Your Own Jeopardy</h2>
     <div class="option-buttons">
       <div class="option-card">
-        <button id="show-create-form">Create Board Manually</button>
+        <button id="show-create-form">Create</button>
         <p class="option-description">Build a new game board from scratch</p>
       </div>
       <div class="option-card">
-        <button id="show-upload">Load Draft File</button>
-        <p class="option-description">Continue working on an incomplete game draft</p>
+        <button id="show-upload">Edit</button>
+        <p class="option-description">Edit a draft or game file</p>
       </div>
       <div class="option-card">
-        <button id="load-game-file">Load Game File</button>
-        <p class="option-description">Load a complete game and start playing immediately</p>
+        <button id="load-game-file">Play</button>
+        <p class="option-description">Upload a game file to start playing</p>
       </div>
     </div>
     
