--- a/jeopardy.html
+++ b/jeopardy.html
@@ -82,7 +82,7 @@
       </div>
       
       <div class="form-actions">
-        <button id="generate-board">Create Game Board</button>
+        <button id="generate-board">Create</button>
         <button id="generate-download">Save</button>
       </div>
     </div>
